--- a/Intents/res/values/strings.xml
+++ b/Intents/res/values/strings.xml
@@ -11,5 +11,11 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="title_activity_edit_description">EditDescriptionActivity</string>
+    <string name="send_email">Send Email</string>
+    <string name="start_animation">Start Animation</string>
+    <string name="title_activity_animation">AnimationActivity</string>
+    <string name="title_activity_broad_casting">BroadCastingActivity</string>
+    <string name="send_message">Send Message</string>
+    <string name="broadcast">Broadcast</string>
 
 </resources>
